--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,2 +1,7 @@
 # TODO - complete with dev requirements (black, flake8, ruff, etc...)
 # Then, execute "pip-compile requirements-dev.in" to generate the file requirements-dev.txt
+pre-commit
+black==22.12.0 # make sure to change the version in .pre-commit-config.yaml to match
+black[jupyter]
+flake8==6.0.0 # make sure to change the version in .pre-commit-config.yaml to match
+isort==5.12.0
