--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,6 @@
 # TODO (if using conda) - complete with environment name and dependencies
 # Refer to the course and follow the best practices for creating a conda environment
-name: env 
+name: abandon_env 
 channels:
   - conda-forge  
   - defaults  
