--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,9 +17,7 @@ decorator==5.1.1
 distlib==0.3.9
     # via virtualenv
 exceptiongroup==1.2.2
-    # via
-    #   ipython
-    #   pytest
+    # via ipython
 executing==2.1.0
     # via stack-data
 filelock==3.16.1
@@ -28,8 +26,6 @@ flake8==6.0.0
     # via -r requirements-dev.in
 identify==2.6.1
     # via pre-commit
-iniconfig==2.0.0
-    # via pytest
 ipython==8.28.0
     # via black
 isort==5.12.0
@@ -44,8 +40,6 @@ mypy-extensions==1.0.0
     # via black
 nodeenv==1.9.1
     # via pre-commit
-packaging==24.1
-    # via pytest
 parso==0.8.4
     # via jedi
 pathspec==0.12.1
@@ -56,8 +50,6 @@ platformdirs==4.3.6
     # via
     #   black
     #   virtualenv
-pluggy==1.5.0
-    # via pytest
 pre-commit==4.0.1
     # via -r requirements-dev.in
 prompt-toolkit==3.0.48
@@ -72,8 +64,6 @@ pyflakes==3.0.1
     # via flake8
 pygments==2.18.0
     # via ipython
-pytest==8.3.3
-    # via -r requirements-dev.in
 pyyaml==6.0.2
     # via pre-commit
 six==1.16.0
@@ -83,9 +73,7 @@ stack-data==0.6.3
 tokenize-rt==6.1.0
     # via black
 tomli==2.0.2
-    # via
-    #   black
-    #   pytest
+    # via black
 traitlets==5.14.3
     # via
     #   ipython
