--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,25 +11,27 @@ jobs:
         python-version: ['3.10'] 
 
     steps:
+      #Step 1:Checkout the repository
       - uses: actions/checkout@v2
+
+      #Step 2:Set up python version
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Step 3: Install project dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
+      # Step 4: Install development dependencies
       - name: Install development dependencies
         run: |
           pip install -r requirements-dev.txt
 
-      - name: Check code formatting with Black
+      # Step 5:Run pre-coomit checks to ensure code quality
+      - name: Run pre-commit to check code 
         run: |
-          black --check .
-
-      - name: Lint code with Flake8
-        run: |
-          flake8 .
+          pre-commit run --all files
